infra/argo/applications/traefik/_tmp_rendered/gateway_try.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: dev-pascal
spec:
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: dev-pascal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 100Mi

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: dev-pascal
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: gke-l7-regional-external-managed	
  listeners:
  - name: https
    hostname: "*.platform.dev.everycure.org"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: gateway-cert
          kind: Secret
  - name: http
    hostname: "*.platform.dev.everycure.org"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All

# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: wildcard-cert
#   namespace: dev-pascal
# spec:
#   secretName: wildcard-cert-secret
#   issuerRef:
#     name: letsencrypt-staging
#     kind: ClusterIssuer
#   dnsNames:
#   - "platform.dev.everycure.org"
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: whoami-route
  namespace: dev-pascal
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "whoami-gw-test.platform.dev.everycure.org"
  rules:
  - backendRefs:
    - name: whoami
      port: 80
